WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259110
(REGRESSION)[IFC] Content in nested inline boxes with decoration clone may overflow unexpectedly
https://bugs.webkit.org/show_bug.cgi?id=259110
Summary
(REGRESSION)[IFC] Content in nested inline boxes with decoration clone may ov...
alan
Reported
2023-07-11 09:01:52 PDT
<
rdar://111097451
>
Attachments
[fast-cq]Patch
(3.49 KB, patch)
2023-07-11 09:09 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-07-11 09:09:45 PDT
Created
attachment 467024
[details]
[fast-cq]Patch
EWS
Comment 2
2023-07-11 11:12:21 PDT
Committed
265953@main
(8d6e889b958e): <
https://commits.webkit.org/265953@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 467024
[details]
.
alan
Comment 3
2023-07-14 18:58:31 PDT
***
Bug 259213
has been marked as a duplicate of this bug. ***
alan
Comment 4
2023-08-01 21:07:39 PDT
***
Bug 259709
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug