(REGRESSION)[IFC] Content in nested inline boxes with decoration clone may overflow unexpectedly https://bugs.webkit.org/show_bug.cgi?id=259110

Reviewed by Antti Koivisto.

This code incorrectly assumed 0 as empty hash map value for float type (while it is inf).

It causes the available space grow infinite when not all (nested) inline-boxes have
the decoration-break property set (e.g. <span class=has_decoration_break><span>some content here</span></span>)
as the inner inline-box is not in the hashmap (and inlineBoxListWithClonedDecorationEnd.get() returns inf).

* LayoutTests/fast/inline/nested-inline-boxes-with-decoration-clone-expected.html: Added.
* LayoutTests/fast/inline/nested-inline-boxes-with-decoration-clone.html: Added.
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::availableWidth):

Canonical link: https://commits.webkit.org/265953@main